--- a/static/css/index.css
+++ b/static/css/index.css
@@ -76,9 +76,9 @@ body {
    color: hsl(204, 86%, 53%) !important;
 }
 
-.publication-authors a:hover {
-    text-decoration: underline;
-}
+/*.publication-authors a:hover {*/
+/*    text-decoration: underline;*/
+/*}*/
 
 .author-block {
   display: inline-block;
