--- a/static/css/index.css
+++ b/static/css/index.css
@@ -73,11 +73,11 @@ body {
 }
 
 .publication-authors a {
-   /*color: hsl(204, 86%, 53%)*/
+   color: hsl(204, 86%, 53%)
 }
 
 .publication-authors a:hover {
-    /*text-decoration: none;*/
+    text-decoration: none;
 }
 
 .author-block {
