--- a/static/css/index.css
+++ b/static/css/index.css
@@ -73,7 +73,7 @@ body {
 }
 
 .publication-authors a {
-   color: hsl(204, 86%, 53%)
+   /*color: hsl(204, 86%, 53%)*/
 }
 
 .publication-authors a:hover {
